updated html and css

--- a/style.html
+++ b/style.html
@@ -34,7 +34,7 @@
     <!-- Trivia Quiz -->
     <main class="wrapper">
         <div class="container">
-            <h1 class="title">Mini Quiz <small> (6 questions)</small></h1>
+            <h1 class="h1-title">Mini Quiz <small> (6 questions)</small></h1>
             <form id="quiz-form" class="content">
                 <div id="question-container"></div>
                 <button type="button" id="next-button" class="hidden">Next Question</button>
@@ -46,16 +46,16 @@
         <article class="container">
             <h2 class="h2-title ">Project Overview</h2>
             <div class="content">
-                <p class="project-content"> As an Entry Level Front End Developer, in age of Artificial Intelligence,
+                <p class="p-content"> As an Entry Level Front End Developer, in age of Artificial Intelligence,
                     being able to leverage with AI can save you and the company time, and also money for the company. In
                     this
                     project I was able to do just that.</p>
-                <p class="project-content">Instead of coding <code>html</code>, <code>css</code> and
+                <p class="p-content">Instead of coding <code>html</code>, <code>css</code> and
                     <code>JavaScript</code>, I used AI to
                     produce the interactive script for the project so I can only spend time on styling the app.
                 </p>
 
-                <p class="prompt project-content"><strong>The Prompt:</strong> <br>Build a 5 question multiple choice
+                <p class="prompt p-content"><strong>The Prompt:</strong> <br>Build a 5 question multiple choice
                     quiz app. validate each question
                     when an answer is
                     selected and submit it before moving to the next question. style correct answer background color
