updated css, html and js

--- a/style.html
+++ b/style.html
@@ -43,7 +43,16 @@
         </div>
 
 
-        <article class="container">
+        <div class="container">
+            <h1 class="h1-title">Mini Quiz 2 <small> (6 questions)</small></h1>
+            <form id="quiz-form2" class="content">
+                <div id="question-container2"></div>
+                <button type="button" id="next-button2" class="hidden2">Next Question</button>
+                <div id="result2" class="result2 hidden2"></div>
+            </form>
+        </div>
+
+        <!-- <article class="container">
             <h2 class="h2-title ">Project Overview</h2>
             <div class="content">
                 <p class="p-content"> As an Entry Level Front End Developer, in age of Artificial Intelligence,
@@ -64,14 +73,18 @@
 
 
             </div>
-        </article>
+        </article> -->
 
 
     </main>
 
     <!-- Scripts -->
+    <script src="./triva.js"></script>
+    <script src="./math.js"></script>
 
-    <script defer src="triva.js"></script>
+
+
+
 </body>
 
 </html>
