updated js and html

--- a/style.html
+++ b/style.html
@@ -47,8 +47,8 @@
             <h1 class="h1-title">Mini Quiz 2 <small> (6 questions)</small></h1>
             <form id="quiz-form2" class="content">
                 <div id="question-container2"></div>
-                <button type="button" id="next-button2" class="hidden2">Next Question</button>
-                <div id="result2" class="result2 hidden2"></div>
+                <button type="button" id="next-button" class="hidden">Next Question</button>
+                <div id="result" class="result hidden"></div>
             </form>
         </div>
 
