added file and updated js

--- a/style.html
+++ b/style.html
@@ -34,7 +34,7 @@
     <!-- Trivia Quiz -->
     <main class="wrapper">
         <div class="container">
-            <h1 class="h1-title">Mini Quiz <small> (6 questions)</small></h1>
+            <h1 class="h1-title">Trivia Quiz <small> (6 questions)</small></h1>
             <form id="quiz-form" class="content">
                 <div id="question-container"></div>
                 <button type="button" id="next-button" class="hidden">Next Question</button>
@@ -44,11 +44,21 @@
 
 
         <div class="container">
-            <h1 class="h1-title">Mini Quiz 2 <small> (6 questions)</small></h1>
+            <h1 class="h1-title">Math Quiz <small> (6 questions)</small></h1>
             <form id="quiz-form2" class="content">
                 <div id="question-container2"></div>
-                <button type="button" id="next-button" class="hidden">Next Question</button>
-                <div id="result" class="result hidden"></div>
+                <button type="button" id="next-button2" class="hidden2">Next Question</button>
+                <div id="result2" class="result2 hidden2"></div>
+            </form>
+        </div>
+
+
+        <div class="container">
+            <h1 class="h1-title">Science Quiz <small> (6 questions)</small></h1>
+            <form id="quiz-form-sci" class="content">
+                <div id="squestion-container"></div>
+                <button type="button" id="next-button-sci" class="hidden-sci">Next Question</button>
+                <div id="result-sci" class="result-sci hidden-sci"></div>
             </form>
         </div>
 
@@ -81,6 +91,7 @@
     <!-- Scripts -->
     <script src="./triva.js"></script>
     <script src="./math.js"></script>
+    <script src="./science.js"></script>
 
 
 
